// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JSDoc comments in types are not misplaced 1`] = `
"// jsdoc-type-comments.d.ts
declare const foo = "foo";
interface A {
  AA?: string;
  AB?: string;
  AC?: string;
}
type B = {
  BA?: string;
  BB?: string;
  BC?: string;
};
declare function something(): {
  a: A;
  b: B;
};
declare function fn(): void;
export { fn, foo, something };
"
`;

exports[`JSDoc comments in types are preserved when tsc emits them 1`] = `
"// jsdoc-type-comments.d.ts
declare const foo = "foo";
interface A {
  /** Comment A1 */
  AA?: string;
  /** Comment A2 */
  AB?: string;
  /** Comment A3 */
  AC?: string;
}
type B = {
  /** Comment B1 */
  BA?: string;
  /** Comment B2 */
  BB?: string;
  /** Comment B3 */
  BC?: string;
};
declare function something(): {
  a: A;
  b: B;
};
declare function fn(): void;
export { fn, foo, something };
"
`;

exports[`declaration merging emits one export per bound name 1`] = `
"// declaration-merging.d.ts
declare function visit(node: unknown, visitor: (n: unknown) => void): void;
declare namespace visit {
  const BREAK: unique symbol;
  const SKIP: unique symbol;
  const REMOVE: unique symbol;
}
interface ZodError<T = unknown> {
  issues: T[];
  format(): string;
}
declare const ZodError: new <T>(issues: T[]) => ZodError<T>;
declare class Box<T> {
  value: T;
  constructor(value: T);
}
declare namespace Box {
  const empty: Box<null>;
}
export { Box, ZodError, visit };
"
`;

exports[`deterministic namespace import index 1`] = `
"// a.d.ts
import * as _$stub_lib from 'stub_lib';
type MyTypeA = _$stub_lib.LibType;
export { MyTypeA };

// b.d.ts
import * as _$stub_lib from 'stub_lib';
type MyTypeB = _$stub_lib.LibType;
export { MyTypeB };

// c.d.ts
import * as _$stub_lib from 'stub_lib';
type MyTypeC = _$stub_lib.LibType;
export { MyTypeC };
"
`;

exports[`deterministic namespace import index 2`] = `
"// a.d.ts
import * as _$stub_lib from 'stub_lib';
type MyTypeA = _$stub_lib.LibType;
export { MyTypeA };

// b.d.ts
import * as _$stub_lib from 'stub_lib';
type MyTypeB = _$stub_lib.LibType;
export { MyTypeB };

// c.d.ts
import * as _$stub_lib from 'stub_lib';
type MyTypeC = _$stub_lib.LibType;
export { MyTypeC };
"
`;

exports[`deterministic namespace import index 3`] = `
"// a.d.ts
import * as _$stub_lib from 'stub_lib';
type MyTypeA = _$stub_lib.LibType;
export { MyTypeA };

// b.d.ts
import * as _$stub_lib from 'stub_lib';
type MyTypeB = _$stub_lib.LibType;
export { MyTypeB };

// c.d.ts
import * as _$stub_lib from 'stub_lib';
type MyTypeC = _$stub_lib.LibType;
export { MyTypeC };
"
`;

exports[`dts input > custom chunk name 1`] = `
"// chunks/BnFt2Ex7-types.d.ts
interface User {
  id: string;
  name: string;
}
export { User as U };

// input1.d.ts
import { U as User } from "./chunks/BnFt2Ex7-types.js";
interface ApiResponse {
  data: User;
}
export { ApiResponse };

// input2.d.ts
import { U as User } from "./chunks/BnFt2Ex7-types.js";
interface UserWithAge extends User {
  age: number;
}
export { UserWithAge };
"
`;

exports[`dts input > default chunk name 1`] = `
"// input1.d.mts
import { U as User } from "./types-BnFt2Ex7.js";
interface ApiResponse {
  data: User;
}
export { ApiResponse };

// input2.d.mts
import { U as User } from "./types-BnFt2Ex7.js";
interface UserWithAge extends User {
  age: number;
}
export { UserWithAge };

// types-BnFt2Ex7.d.ts
interface User {
  id: string;
  name: string;
}
export { User as U };
"
`;

exports[`dts plugin > banner 1`] = `
"// minimal.d.ts
/* My Banner */
declare function foo(): void;
export { foo };
/* My Footer minimal.d.ts */
"
`;

exports[`dts plugin > basic 1`] = `
"// basic.d.ts
declare const foo: number;
type SomeType<T> = T;
type FooType = string;
interface Interface {}
declare function fn(argument0: SomeType<FooType>, opt: Interface): void;
declare enum Enum {
  A = 0,
  B = 1,
  C = 2,
}
declare class Cls {
  foo: string;
  fn(e: Enum): void;
}
export { Cls, Enum, fn, foo };

// basic.js
const foo = 42;
function fn(argument0, opt) {}
let Enum = /* @__PURE__ */ function(Enum) {
	Enum[Enum["A"] = 0] = "A";
	Enum[Enum["B"] = 1] = "B";
	Enum[Enum["C"] = 2] = "C";
	return Enum;
}({});
class Cls {
	foo;
	fn(e) {}
}

export { Cls, Enum, fn, foo };
"
`;

exports[`dts plugin > cjs exports > auto cjs exports 1`] = `
"// cjs-exports.js
'use strict';

var cjsExports = 42;

module.exports = cjsExports;
"
`;

exports[`dts plugin > cjs exports > dts cjsDefault 1`] = `
"// cjs-exports.d.ts
declare const _default: 42;
export = _default;
"
`;

exports[`dts plugin > css.ts files 1`] = `
"// index.d.ts
export * from './file.css';
"
`;

exports[`dts plugin > declaration merging emits one export per bound name 1`] = `
"// declaration-merging.d.ts
declare function visit(node: unknown, visitor: (n: unknown) => void): void;
declare namespace visit {
  const BREAK: unique symbol;
  const SKIP: unique symbol;
  const REMOVE: unique symbol;
}
interface ZodError<T = unknown> {
  issues: T[];
  format(): string;
}
declare const ZodError: new <T>(issues: T[]) => ZodError<T>;
declare class Box<T> {
  value: T;
  constructor(value: T);
}
declare namespace Box {
  const empty: Box<null>;
}
export { Box, ZodError, visit };
"
`;

exports[`dts plugin > declare module 1`] = `
"// declare-module.d.ts
declare module "virtual" {
  const _default: string;
  export default _default;
}
export {};
"
`;

exports[`dts plugin > declare relative module 1`] = `
"// main-bar.d.ts
interface FooBar {
  foobar: string;
}
declare module "./main-bar.js" {
  interface FooBar {
    foobar2: string;
  }
}
declare module "./main-bar.js" {
  interface Bar {
    bar2: string;
  }
}
interface FooBaz {
  foobaz: string;
}
declare module "./main-foo.js" {
  interface Foo {
    foo2: string;
  }
}
interface Bar {
  bar: string;
}
export { Bar, FooBar, FooBaz };

// main-baz/index.d.ts
declare module "../main-foo.js" {
  interface Foo {
    baz: string;
  }
}
interface Baz {
  baz: string;
}
export { Baz };

// main-foo.d.ts
interface Foo {
  foo: string;
}
export { Foo };
"
`;

exports[`dts plugin > decorators 1`] = `
"// decorator.d.ts
declare class Product {
  accessor price: number;
}
export { Product };
"
`;

exports[`dts plugin > deterministic namespace import index 1`] = `
"// a.d.ts
type MyTypeA = import('stub_lib').LibType;
export { MyTypeA };

// b.d.ts
type MyTypeB = import('stub_lib').LibType;
export { MyTypeB };

// c.d.ts
type MyTypeC = import('stub_lib').LibType;
export { MyTypeC };
"
`;

exports[`dts plugin > deterministic namespace import index 2`] = `
"// a.d.ts
type MyTypeA = import('stub_lib').LibType;
export { MyTypeA };

// b.d.ts
type MyTypeB = import('stub_lib').LibType;
export { MyTypeB };

// c.d.ts
type MyTypeC = import('stub_lib').LibType;
export { MyTypeC };
"
`;

exports[`dts plugin > deterministic namespace import index 3`] = `
"// a.d.ts
type MyTypeA = import('stub_lib').LibType;
export { MyTypeA };

// b.d.ts
type MyTypeB = import('stub_lib').LibType;
export { MyTypeB };

// c.d.ts
type MyTypeC = import('stub_lib').LibType;
export { MyTypeC };
"
`;

exports[`dts plugin > dts input > custom chunk name 1`] = `
"// chunks/BnFt2Ex7-types.d.ts
interface User {
  id: string;
  name: string;
}
export { User as U };

// input1.d.ts
import { U as User } from "./chunks/BnFt2Ex7-types.js";
interface ApiResponse {
  data: User;
}
export { ApiResponse };

// input2.d.ts
import { U as User } from "./chunks/BnFt2Ex7-types.js";
interface UserWithAge extends User {
  age: number;
}
export { UserWithAge };
"
`;

exports[`dts plugin > dts input > default chunk name 1`] = `
"// input1.d.mts
import { U as User } from "./types-BnFt2Ex7.js";
interface ApiResponse {
  data: User;
}
export { ApiResponse };

// input2.d.mts
import { U as User } from "./types-BnFt2Ex7.js";
interface UserWithAge extends User {
  age: number;
}
export { UserWithAge };

// types-BnFt2Ex7.d.ts
interface User {
  id: string;
  name: string;
}
export { User as U };
"
`;

exports[`dts plugin > dts input > input array 1`] = `
"// dts-input.d.ts
declare class Foo {}
export { Foo };
"
`;

exports[`dts plugin > dts input > input object 1`] = `
"// index.d.ts
declare class Foo {}
export { Foo };
"
`;

exports[`dts plugin > entryFileNames > custom chunk name 1`] = `
"// chunks/BnFt2Ex7-types.d.ts
interface User {
  id: string;
  name: string;
}
export { User as U };

// input1.d.ts
import { U as User } from "./chunks/BnFt2Ex7-types.js";
interface ApiResponse {
  data: User;
}
export { ApiResponse };

// input2.d.ts
import { U as User } from "./chunks/BnFt2Ex7-types.js";
interface UserWithAge extends User {
  age: number;
}
export { UserWithAge };
"
`;

exports[`dts plugin > entryFileNames > default chunk name 1`] = `
"// input1.d.mts
import { Input2 } from "./input2.mjs";
interface Input1 extends Input2 {
  input1: string;
}
declare const input1: Input1;
export { Input1, input1 };

// input2.d.mts
interface Shared {
  shared: string;
}
declare const shared: Shared;
interface Input2 extends Shared {
  input2: string;
}
declare const input2: Input2;
export { Input2, input2 };
"
`;

exports[`dts plugin > export * preserves type modifiers from re-exports (tsc) 1`] = `
"// index.d.ts
declare class TaskWrapper {
  run(): void;
}
interface Task {
  title: string;
}
export type { Task, TaskWrapper };
"
`;

exports[`dts plugin > export * preserves type modifiers from re-exports 1`] = `
"// index.d.ts
declare class TaskWrapper {
  run(): void;
}
interface Task {
  title: string;
}
export type { Task, TaskWrapper };
"
`;

exports[`dts plugin > function overloads 1`] = `
"// function-overloads.d.ts
interface Config {
  name: string;
  version: number;
}
declare function useConfig(): Config;
declare function useConfig<T>(selector: (config: Config) => T): T;
export { useConfig };
"
`;

exports[`dts plugin > infer false branch 1`] = `
"// index.d.ts
type U$1 = 'mod';
type U = 'local';
type Test<T> = T extends Array<infer U> ? (T extends Array<infer U2> ? U2 : U) : U;
export { Test, type U$1 as U };
"
`;

exports[`dts plugin > infer type parameter 1`] = `
"// infer-type-param.d.ts
type Mapped<T> = T extends Record<string, infer U> ? U : never;
type Fn1<U = unknown> = () => Mapped<U>;
type Fn2<V = unknown> = () => Mapped<V>;
export { Fn1, Fn2 };
"
`;

exports[`dts plugin > input alias 1`] = `
"// output1.d.ts
import { Input2 } from "./output2/index.js";
interface Input1 extends Input2 {
  input1: string;
}
declare const input1: Input1;
export { Input1, input1 };

// output1.js
import { input2 } from './output2/index.js';

const input1 = {
	...input2,
	input1: "input1"
};

export { input1 };

// output2/index.d.ts
interface Shared {
  shared: string;
}
declare const shared: Shared;
interface Input2 extends Shared {
  input2: string;
}
declare const input2: Input2;
export { Input2, input2 };

// output2/index.js
const shared = { shared: "shared" };

const input2 = {
	...shared,
	input2: "input2"
};

export { input2 };
"
`;

exports[`dts plugin > jSDoc comments in types are preserved when tsc emits them 1`] = `
"// jsdoc-type-comments.d.ts
declare const foo = "foo";
interface A {
  /** Comment A1 */
  AA?: string;
  /** Comment A2 */
  AB?: string;
  /** Comment A3 */
  AC?: string;
}
type B = {
  /** Comment B1 */
  BA?: string;
  /** Comment B2 */
  BB?: string;
  /** Comment B3 */
  BC?: string;
};
declare function something(): {
  a: A;
  b: B;
};
declare function fn(): void;
export { fn, foo, something };
"
`;

exports[`dts plugin > manualChunks 1`] = `
"// entry.d.ts
export { s as shared1 } from "./shared1-chunk-BbYo8D0c.js";
declare const shared2 = "shared2";
export { shared2 };

// shared1-chunk-BbYo8D0c.d.ts
declare const shared1 = "shared1";
export { shared1 as s };
"
`;

exports[`dts plugin > module augmentation files preserve export {} to remain modules 1`] = `
"// index.d.ts
declare module '@mui/material/Button' {
  interface ButtonPropsSizeOverrides {
    xsmall: true;
  }
}
declare const Button = "button";
export { Button };
"
`;

exports[`dts plugin > module augmentation-only file preserves export {} as module marker 1`] = `
"// module-augmentation-only.d.ts
declare module '@mui/material/Button' {
  interface ButtonPropsSizeOverrides {
    xsmall: true;
  }
}
export {};
"
`;

exports[`dts plugin > paths 1`] = `
"// index.d.ts
declare const foo = 42;
export { foo };
"
`;

exports[`dts plugin > re-export from lib > both 1`] = `
"// a.d.ts
export * from 'stub-lib';

// b.d.ts
import "./a.js";
export type { LibType } from 'stub-lib';
"
`;

exports[`dts plugin > re-export from lib > onlyA 1`] = `
"// a.d.ts
export * from 'stub-lib';
"
`;

exports[`dts plugin > re-export from lib > onlyB 1`] = `
"// b.d.ts
export type { LibType } from 'stub-lib';
"
`;

exports[`dts plugin > real css imports are externalized 1`] = `
"// index.d.ts
import './styles.css';
declare const foo: number;
export { foo };
"
`;

exports[`dts plugin > resolve dts 1`] = `
"// index.d.ts
type Foo = string;
export type { Foo };

// index.js

"
`;

exports[`dts plugin > scss imports are externalized 1`] = `
"// index.d.ts
import './styles.scss';
declare const foo: number;
export { foo };
"
`;

exports[`dts plugin > side effects 1`] = `
"// index.d.ts
import "./mod.js";

// mod.d.ts
declare global {
  let sideEffectExecuted: boolean;
}
"
`;

exports[`dts plugin > sub namespace 1`] = `
"// sub-namespace.d.ts
declare namespace Foo.Bar {}
export { Foo };
"
`;

exports[`dts plugin > tree-shaking 1`] = `
"// index.d.ts
type A = string;
export type { A };

// index.js

"
`;

exports[`dts plugin > triple-slash directives are preserved and deduplicated in dtsInput mode 1`] = `
"// input.d.ts
/// <reference types="node" />
declare function readConfig(path: string): Buffer;
declare function resolve(p: string): string;
declare function getVersion(): string;
export { getVersion, readConfig, resolve };
"
`;

exports[`dts plugin > tsgo with custom path 1`] = `
"// basic.d.ts
declare const foo: number;
type SomeType<T> = T;
type FooType = string;
interface Interface {}
declare function fn(argument0: SomeType<FooType>, opt: Interface): void;
declare enum Enum {
  A = 0,
  B = 1,
  C = 2,
}
declare class Cls {
  foo: string;
  fn(e: Enum): void;
}
export { Cls, Enum, fn, foo };

// basic.js
const foo = 42;
function fn(argument0, opt) {}
let Enum = /* @__PURE__ */ function(Enum) {
	Enum[Enum["A"] = 0] = "A";
	Enum[Enum["B"] = 1] = "B";
	Enum[Enum["C"] = 2] = "C";
	return Enum;
}({});
class Cls {
	foo;
	fn(e) {}
}

export { Cls, Enum, fn, foo };
"
`;

exports[`dts plugin > tsx 1`] = `
"// tsx.d.ts
import { JSX } from 'solid-js';
declare function createComponent(): JSX.HTMLAttributes<HTMLElement>;
export { createComponent };

// tsx.js
import { jsx } from 'react/jsx-runtime';

function createComponent() {
	return /* @__PURE__ */ jsx("div", {});
}

export { createComponent };
"
`;

exports[`dts plugin > type-only export 1`] = `
"// index.d.ts
declare const all = 42;
declare class A {}
declare class B {}
declare const ns$1 = 42;
export { A as RuntimeA, type A as TypeA, type B as TypeB, type A as TypeC, type all, type namespace_d as ns };
"
`;

exports[`entryFileNames > custom chunk name 1`] = `
"// chunks/BnFt2Ex7-types.d.ts
interface User {
  id: string;
  name: string;
}
export { User as U };

// input1.d.ts
import { U as User } from "./chunks/BnFt2Ex7-types.js";
interface ApiResponse {
  data: User;
}
export { ApiResponse };

// input2.d.ts
import { U as User } from "./chunks/BnFt2Ex7-types.js";
interface UserWithAge extends User {
  age: number;
}
export { UserWithAge };
"
`;

exports[`entryFileNames > default chunk name 1`] = `
"// input1.d.mts
import { Input2 } from "./input2.mjs";
interface Input1 extends Input2 {
  input1: string;
}
declare const input1: Input1;
export { Input1, input1 };

// input2.d.mts
interface Shared {
  shared: string;
}
declare const shared: Shared;
interface Input2 extends Shared {
  input2: string;
}
declare const input2: Input2;
export { Input2, input2 };
"
`;

exports[`export * preserves type modifiers from re-exports (tsc) 1`] = `
"// index.d.ts
declare class TaskWrapper {
  run(): void;
}
interface Task {
  title: string;
}
export { type Task, type TaskWrapper };
"
`;

exports[`export * preserves type modifiers from re-exports 1`] = `
"// index.d.ts
declare class TaskWrapper {
  run(): void;
}
interface Task {
  title: string;
}
export { type Task, type TaskWrapper };
"
`;

exports[`jSDoc comments in types are preserved when tsc emits them 1`] = `
"// jsdoc-type-comments.d.ts
declare const foo = "foo";
interface A {
  /** Comment A1 */
  AA?: string;
  /** Comment A2 */
  AB?: string;
  /** Comment A3 */
  AC?: string;
}
type B = {
  /** Comment B1 */
  BA?: string;
  /** Comment B2 */
  BB?: string;
  /** Comment B3 */
  BC?: string;
};
declare function something(): {
  a: A;
  b: B;
};
declare function fn(): void;
export { fn, foo, something };
"
`;

exports[`module augmentation files preserve export {} to remain modules 1`] = `
"// index.d.ts
declare module '@mui/material/Button' {
  interface ButtonPropsSizeOverrides {
    xsmall: true;
  }
}
declare const Button = "button";
export { Button };
"
`;

exports[`module augmentation-only file preserves export {} as module marker 1`] = `
"// module-augmentation-only.d.ts
declare module '@mui/material/Button' {
  interface ButtonPropsSizeOverrides {
    xsmall: true;
  }
}
export {};
"
`;

exports[`re-export from lib > onlyA 1`] = `
"// a.d.ts
export * from 'stub-lib';
"
`;

exports[`re-export from lib > onlyB 1`] = `
"// b.d.ts
export { type LibType } from 'stub-lib';
"
`;

exports[`real css imports are externalized 1`] = `
"// index.d.ts
import './styles.css';
declare const foo: number;
export { foo };
"
`;

exports[`scss imports are externalized 1`] = `
"// index.d.ts
import './styles.scss';
declare const foo: number;
export { foo };
"
`;

exports[`triple-slash directives are preserved and deduplicated 1`] = `
"// index.d.ts
declare function readConfig(path: string): Buffer;
declare function resolve(p: string): string;
declare function getVersion(): string;
export { getVersion, readConfig, resolve };
"
`;

exports[`triple-slash directives are preserved and deduplicated in dtsInput mode 1`] = `
"// input.d.ts
/// <reference types="node" />
declare function readConfig(path: string): Buffer;
declare function resolve(p: string): string;
declare function getVersion(): string;
export { getVersion, readConfig, resolve };
"
`;
